--- a/lms-platform/client/package.json
+++ b/lms-platform/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "axios": "^1.13.2",
     "framer-motion": "^12.23.26",
     "react": "^19.2.0",
